# merkle-race

./: Cargo.toml  flamegraph.sh  race-batching.sh  race-merkle.sh  race-updates-per-sec.sh  race.sh  test.sh
benches/: deps.rs  main.rs  merkle.rs  multiexp.rs  realworld.rs  rocksdb.rs  verkle.rs
docs/: flamegraph-2022-04-19.md  merkle++.csv  merkle-blake.csv  merkle-blake2b.csv  merkle-sha3.csv  merkle-tiny-sha3.csv  merkle.csv  verkle-const.csv  verkle-noconsttime.csv  verkle-notemplate.csv
docs/batching-benefits/: merkle_sha3_arity_16.csv  merkle_sha3_arity_2.csv  verkle_arity_1024.csv
prize-winning-stuff/src/: verkle_ristretto.rs
src/: hashing_traits.rs  ipa_multipoint.rs  lib.rs  macros.rs  main.rs  merkle.rs  merkle_abstract.rs  merkle_crhf.rs  merkle_pp.rs  node_index.rs  polynomial.rs  tree_hasher.rs  verkle.rs  verkle2.rs  verkle_ristretto.rs
