[package]
name = "merkle-race"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
blake2 = "0.10.4"
bulletproofs = { git = "https://github.com/zkcrypto/bulletproofs", rev = "df6c41b" }
clap = { version = "3.1.8", features = ["derive"] }
criterion = "0.3.5"
#curve25519-dalek =  { version = "4.0.0-pre.2", features = ["serde"] }
curve25519-dalek = { git = "https://github.com/alinush/curve25519-dalek", tag = "4.0.0-pre.2-alin", features = ["serde"] }
digest = "0.9.0"
hex = "0.4.3"
more-asserts = "0.2.2"
rand = "0.8.5"
rust-incrhash = { path = "../rust-incrhash" }
serde = { version = "1", features = ["derive"] }
sha3 = "0.10.1"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
itertools = "0.10.3"
thousands = "0.2.0"
rocksdb = "0.19.0"
sha2 = "0.10.5"
serde_json = "1.0.85"
lazy_static = "1.4.0"
once_cell = "1.14.0"
bitvec = "1.0.1"
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"

[profile.release]
debug = true    # for cargo flamegraph to be able to profile in release mode

#[[bench]]
#name = "multiexp"
#harness = false
#
#[[bench]]
#name = "verkle"
#harness = false

[[bench]]
name = "realworld"
harness = false

[[bench]]
name = "deps"
harness = false
